ingress-demo.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-demo
  namespace: default
spec:
  rules:
  # - host: blue.io
  - host: stable-color.io
    http:
      paths:
      - backend:
          service:
            name: blue-web
            port:
              number: 80
        path: "/"
        pathType: ImplementationSpecific
  # - host: green.io
  - host: test-color.io
    http:
      paths:
      - backend:
          service:
            name: green-web
            port:
              number: 80
        path: "/"
        pathType: ImplementationSpecific
